--- a/cv1.html
+++ b/cv1.html
@@ -7,21 +7,87 @@
     <link rel="stylesheet" href="css/bootstrap.css">
 </head>
 <body>
-<div id ="head">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-9" id = "coordonnees">
-                <p>Meunier Lubin<br/>
-                20, rue de la Garenne<br/>
-                    02250 Marcy-sous-marle<br/>
-            <p>Suivez moi sur :
-                    <a href ="facebook : https://fr-fr.facebook.com/lubin.meuniermaggiorotti">Facebook</a></br>
-             Suivez moi sur :
-                    <a href ="linkedin :  https://www.linkedin.com/in/lubin-meunier-511323172/">Linkedin</a></br>
-             Suivez moi sur :
-                <a href ="github : https://github.com/Lubin1611">Github</a></p>
+        <div id ="head">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-9" id = "coordonnees">
+                        <p>Meunier Lubin<br/>
+                        20, rue de la Garenne<br/>
+                            02250 Marcy-sous-marle</p>
+            <span>Suivez moi sur :
+                <a href ="https://fr-fr.facebook.com/lubin.meuniermaggiorotti"><img src ="fb.png"></a></span>
+             <span>Suivez moi sur :
+                 <a href = "https://www.linkedin.com/in/lubin-meunier-511323172"><img src ="ln.png"</a></span>
+             <span>Suivez moi sur :
+                 <a href = "https://github.com/Lubin1611"><img src ="git.png"></a></span>
             </div>
             <div class="col-lg-3" id = "photo">
         </div>
+        </div>
+    </div>
+</div>
+                         <div class = container>
+            <div class="alert alert-warning"><button type="button" class="btn btn-primary" id ="bouton" onclick="affichermasquer()">Afficher/masquer</button>
+            <h3>Experience professionnelle</h3></div>
+                                   </div> 
+
+            <div class = "container" id="globalpro">
+                <div class ="row">
+                    <div class ="col-lg-3 dates">
+                        <span>Dates</span>
+                    </div>
+                    <div class = "col-lg-9" id ="experiencepro">
+
+                            <ul class="list-group">
+                                <li class="alert alert-success">Cras justo odio</li>
+                                <li class="alert alert-success">Dapibus ac facilisis in</li>
+                                <li class="alert alert-success">Morbi leo risus</li>
+                                <li class="alert alert-success">Porta ac consectetur ac</li>
+                                <li class="alert alert-success">Vestibulum at eros</li>
+                            </ul>
+                    </div>
+                </div>
+            </div>
+
+
+                         <div class = container>
+                <div class="alert alert-warning"><button type="button" class="btn btn-primary" id ="bouton2" onclick="affichermasquer2()">Afficher/masquer</button>
+                    <h3>Formations</h3></div>
+                        </div> 
+
+            <div class = "container" id ="globalformations">
+                <div class ="row">
+                    <div class ="col-lg-3 dates">
+                        <span>Dates</span>
+                    </div>
+                    <div class = "col-lg-9" id = "formations">
+
+                        <ul class="list-group">
+                            <li class="alert alert-success">Cras justo odio</li>
+                            <li class="alert alert-success">Dapibus ac facilisis in</li>
+                            <li class="alert alert-success">Morbi leo risus</li>
+                            <li class="alert alert-success">Porta ac consectetur ac</li>
+                            <li class="alert alert-success">Vestibulum at eros</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <div class ="container">
+                <div class="alert alert-warning"><h3>Competences</h3></div>
+            </div>
+
+            <div class ="container">
+                <div class="col-lg-12" id = "competences">
+                    <ul class="list-group">
+                        <li class="alert alert-success">Cras justo odio</li>
+                        <li class="alert alert-success">Dapibus ac facilisis in</li>
+                        <li class="alert alert-success">Morbi leo risus</li>
+                        <li class="alert alert-success">Porta ac consectetur ac</li>
+                        <li class="alert alert-success">Vestibulum at eros</li>
+                    </ul>
+                </div>
+            </div>
+        <script src="cvjava.js" type="text/javascript"></script>
 </body>
 </html>
